@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<foo xmlns="">
+<foo xmlns="" content-as-bytes="RHJlYW0gVGhlYXRlciE=">
     <content-as-string>Dream Theater!</content-as-string>
-    <content-as-bytes>RHJlYW0gVGhlYXRlciE=</content-as-bytes>
 </foo>
