@@ -2,6 +2,11 @@
 Version (SVN)
 -------------
 
+XML:   Resolved issue CASTOR-1427 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Added support for unmarshalling attributes of type byte[].
+       Details: http://jira.codehaus.org/browse/CASTOR-1427
+       (Werner - 20060524)
+
 XML:   Resolved issue CASTOR-690 using contribution from Doug Berkland [berkland@spamcop.net]
        Fixed problem with location attribute in the context of extend hierarchies.
        Details: http://jira.codehaus.org/browse/CASTOR-690
